--- a/MISA.CukCuk.Api/appsettings.json
+++ b/MISA.CukCuk.Api/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "connectionString": "Host = 47.241.69.179;Database = MF955_DuyLe_CukCuk;User Id = dev;Password = 12345678"
+  }
 }
