bao cao ngay 17/08/2021

--- a/MISA.CukCuk.Api/appsettings.json
+++ b/MISA.CukCuk.Api/appsettings.json
@@ -8,6 +8,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "connectionString": "Host = 47.241.69.179;Database = MF955_DuyLe_CukCuk;User Id = dev;Password = 12345678"
-  }
+    "MISACukCukConnectionString": "Host = 47.241.69.179;Database = MF955_DuyLe_CukCuk;User Id = dev;Password = 12345678",
+    "DefaultConnectionString": "Host = 47.241.69.179;Database = MISA_NVManh_Demo_CukCuk;User Id = dev;Password = 12345678"
+  },
+  "AvatarLimitSize": "100MB"
 }
