--- a/MISA.CukCuk.Api/appsettings.json
+++ b/MISA.CukCuk.Api/appsettings.json
@@ -11,5 +11,10 @@
     "MISACukCukConnectionString": "Host = 47.241.69.179;Database = MF955_DuyLe_CukCuk;User Id = dev;Password = 12345678",
     "DefaultConnectionString": "Host = 47.241.69.179;Database = MISA_NVManh_Demo_CukCuk;User Id = dev;Password = 12345678"
   },
-  "AvatarLimitSize": "100MB"
+  "AvatarLimitSize": "100MB",
+    "EPPlus": {
+      "ExcelPackage": {
+        "LicenseContext": "Commercial" //The license context used
+      }
+    }
 }
