--- a/MISA.CukCuk.Api/appsettings.json
+++ b/MISA.CukCuk.Api/appsettings.json
@@ -8,8 +8,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MISACukCukConnectionString": "Host = 47.241.69.179;Database = MF955_DuyLe_CukCuk;User Id = dev;Password = 12345678",
-    "DefaultConnectionString": "Host = 47.241.69.179;Database = MISA_NVManh_Demo_CukCuk;User Id = dev;Password = 12345678"
+    "MISACukCukConnectionString": "Host = localhost;Database = misa_cukcuk_demo_mf955;User Id = root;Password = 123456789",
+    "DefaultConnectionString": "Host = 47.241.69.179;Database = MF955_DuyLe_CukCuk;User Id = dev;Password = 12345678"
   },
   "AvatarLimitSize": "100MB",
     "EPPlus": {
